<resources>
    <string name="app_name">Dice Roller</string>
    <string name="instructions">Instructions</string>
    <string name="d4">D4</string>
    <string name="d6">D6</string>
    <string name="d8">D8</string>
    <string name="d10">D10</string>
    <string name="d12">D12</string>
    <string name="d20">D20</string>
    <string name="roll">Roll</string>
    <string name="d100">D100</string>
    <string name="app_theme">Application Theme</string>
    <string name="settings">Settings</string>
    <string name="system">System</string>
    <string name="auto">Auto</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="save">Save Set</string>
    <string name="die_type">Die Type</string>
    <string name="modifier">Mod</string>
    <string name="enter_set_name">Enter Set Name</string>
    <string name="default_set_name">Set %1$d</string>
    <!--<editor-fold desc="error messages ">-->
    <string name="error_loading_set">Error while loading set information</string>
    <string name="error_set_not_found">Set could not be located</string>
    <string name="error_deleting_set">Error while deleting set</string>
    <string name="error_saving_set">Error while saving set</string>
    <string name="error_set_with_no_rolls">A set must have at least one die roll</string>
    <string name="error_set_name_exists">Set name already exists</string>
    <string name="error_create_set">Error while building set , please try again</string>
    <!--</editor-fold>-->
    <!--<editor-fold desc="help dialog strings">-->
    <string name="help_rolling_normally">Rolling normally</string>
    <string name="help_rolling_normally_details">Press on one of the dice on the right side to roll that die\nThe result will appear on the left side</string>
    <string name="help_create_set">Creating a roll set</string>
    <string name="help_create_set_details">
  Press on the plus button on the bottom left corner\n
  You will be asked to give the set a name\n
  The right side will be expanded to show you the list of rolls you can add to the set\n
  You can add how many times each die will be rolled by altering the number next to it\n
  Next to the MOD label you can add a modifier to be added to the end of your roll\n
  When you are finished press the save icon on the bottom left and the set will appear on the bottom side of your screen
    </string>
    <string name="help_edit_set">Editing an existing set</string>
    <string name="help_edit_set_details">
  To edit an existing set long press on the set\'s name\n
  If you did it correctly the set\'s name will light up and the editing panel will expand\n
  You can then alter the set and save the set using the save button on the lower left side\n
  Or delete the set by using the delete button next to he save button
    </string>
    <string name="help_exploding_dice">Exploding dice</string>
    <string name="help_exploding_dice_details">While editing or creating a new set, you can tap on the die button to set that roll as exploding\n
  This means that when you roll this die as part of the set and it rolls the maximum value, it will automatically be rolled again and continue doing so while the maximum value is rolled
    </string>
    <!--</editor-fold>-->
</resources>