<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@id/home_dest">

    <fragment
        android:id="@+id/home_dest"
        android:name="gr.blackswamp.diceroller.ui.fragments.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/show_name_input"
            app:destination="@id/name_dest" />
        <action
            android:id="@+id/show_help"
            app:destination="@+id/help_dest" />
    </fragment>

    <dialog
        android:id="@+id/name_dest"
        android:name="gr.blackswamp.diceroller.ui.dialogs.NameDialog"
        android:label="@string/enter_set_name"
        tools:layout="@layout/dialog_name">
        <argument
            android:name="nextId"
            android:defaultValue="1"
            app:nullable="false" />
    </dialog>
    <dialog
        android:id="@+id/help_dest"
        android:name="gr.blackswamp.diceroller.ui.dialogs.HelpDialog"
        android:label="@string/instructions"
        tools:layout="@layout/dialog_help" />
</navigation>