<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/d4"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/d4"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/d6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/d6"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/d6"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/d8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/d4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/d8"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/d8"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/d10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/d6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/d10"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/d10"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/d20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/d8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/d20"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/d20"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/d100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/d10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/d100"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/d100"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/d20" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/roll_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="d4,d6,d8,d20,d100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/d4times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:gravity="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/d4"
        app:layout_constraintStart_toEndOf="@id/roll_barrier"
        app:layout_constraintTop_toTopOf="@id/d4"
        tools:text="10" />

    <TextView
        android:id="@+id/d6times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:gravity="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/d6"
        app:layout_constraintStart_toEndOf="@id/roll_barrier"
        app:layout_constraintTop_toTopOf="@id/d6"
        tools:text="10" />

    <TextView
        android:id="@+id/d8times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:gravity="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/d8"
        app:layout_constraintStart_toEndOf="@id/roll_barrier"
        app:layout_constraintTop_toTopOf="@id/d8"
        tools:text="10" />

    <TextView
        android:id="@+id/d10times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:gravity="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/d10"
        app:layout_constraintStart_toEndOf="@id/roll_barrier"
        app:layout_constraintTop_toTopOf="@id/d10"
        tools:text="10" />

    <TextView
        android:id="@+id/d20times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:gravity="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/d20"
        app:layout_constraintStart_toEndOf="@id/roll_barrier"
        app:layout_constraintTop_toTopOf="@id/d20"
        tools:text="10" />

    <TextView
        android:id="@+id/d100times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:gravity="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/d100"
        app:layout_constraintStart_toEndOf="@id/roll_barrier"
        app:layout_constraintTop_toTopOf="@id/d100"
        tools:text="10" />


    <Button

        android:id="@+id/roll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/roll"
        app:layout_constraintEnd_toEndOf="" />


</androidx.constraintlayout.widget.ConstraintLayout>